revert some changes