@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.service;
 
-import com.google.common.collect.ImmutableMap;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BedfordshireCourt;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.BristolCourt;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ClevelandCourt;
@@ -99,96 +98,87 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.WALES;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.WALES_FRC_LIST;
 
-public class CaseHearingFunctionsTest {
+class CaseHearingFunctionsTest {
 
     @Test
-    public void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtList_thenNottinghamCourtListIsReturned() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtList_thenNottinghamCourtListIsReturned() {
+        Map<String, Object> caseData = Map.of(
             REGION, MIDLANDS,
             MIDLANDS_FRC_LIST, NOTTINGHAM);
-
         String courtList = CaseHearingFunctions.getSelectedCourt(caseData);
         assertThat(courtList, is(NOTTINGHAM_COURTLIST));
     }
 
     @Test
-    public void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtListGa_thenNottinghamCourtListGaIsReturned() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtListGa_thenNottinghamCourtListGaIsReturned() {
+        Map<String, Object> caseData = Map.of(
             GENERAL_APPLICATION_DIRECTIONS_HEARING_REGION, MIDLANDS,
             GENERAL_APPLICATION_DIRECTIONS_MIDLANDS_FRC, NOTTINGHAM);
-
         String courtList = CaseHearingFunctions.getSelectedCourtGA(caseData);
         assertThat(courtList, is(GENERAL_APPLICATION_DIRECTIONS_NOTTINGHAM_COURT));
     }
 
     @Test
-    public void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtListCt_thenNottinghamCourtListCtIsReturned() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void givenMidlandsNottinghamCourtDetailsInCaseData_whenGettingSelectedCourtListCt_thenNottinghamCourtListCtIsReturned() {
+        Map<String, Object> caseData = Map.of(
             REGION_CT, MIDLANDS,
             MIDLANDS_FRC_LIST_CT, NOTTINGHAM);
-
         String courtList = CaseHearingFunctions.getSelectedCourtComplexType(caseData);
         assertThat(courtList, is(NOTTINGHAM_COURTLIST));
     }
 
     @Test
-    public void givenHighCourtDetailsInCaseData_whenGettingSelectedCourtListCt_thenHighCourtListCtIsReturned() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void givenHighCourtDetailsInCaseData_whenGettingSelectedCourtListCt_thenHighCourtListCtIsReturned() {
+        Map<String, Object> caseData = Map.of(
             REGION_CT, HIGHCOURT,
             HIGHCOURT_FRC_LIST_CT, HIGHCOURT);
-
         String courtList = CaseHearingFunctions.getSelectedCourtComplexType(caseData);
         assertThat(courtList, is(HIGHCOURT_COURTLIST));
     }
 
     @Test
-    public void shouldPopulateReedleyCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateReedleyCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, NORTHWEST,
             NORTHWEST_FRC_LIST, LANCASHIRE,
             LANCASHIRE_COURTLIST, REEDLEY);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Reedley Family Hearing Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY),
             is("The Court House, Colne Road (Junction with Swaledale Avenue), Reedley, Burnely, BB10 2LJ"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 303 0642"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("LancashireandCumbriaFRC@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateReedleyCourtDetailsFinrem() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateReedleyCourtDetailsFinrem() {
+        Map<String, Object> caseData = Map.of(
             REGION, NORTHWEST,
             NORTHWEST_FRC_LIST, LANCASHIRE,
             LANCASHIRE_COURTLIST, REEDLEY);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Reedley Family Hearing Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY),
             is("The Court House, Colne Road (Junction with Swaledale Avenue), Reedley, Burnely, BB10 2LJ"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 303 0642"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("LancashireandCumbriaFRC@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateLeylandCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateLeylandCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, NORTHWEST,
             NORTHWEST_FRC_LIST, LANCASHIRE,
             LANCASHIRE_COURTLIST, LEYLAND);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Leyland Family Hearing Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("The Family Court, Lancastergate, Leyland, PR25 2EX"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 303 0642"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("LancashireandCumbriaFRC@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateLeylandCourtDetailsFinrem() {
-
+    void shouldPopulateLeylandCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.NORTHWEST)
             .northWestFrcList(RegionNorthWestFrc.LANCASHIRE)
             .courtListWrapper(
@@ -196,21 +186,19 @@ public class CaseHearingFunctionsTest {
                     .build())
             .build();
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Leyland Family Hearing Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("The Family Court, Lancastergate, Leyland, PR25 2EX"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 303 0642"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("LancashireandCumbriaFRC@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateCambridgeCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateCambridgeCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHEAST,
             SOUTHEAST_FRC_LIST, BEDFORDSHIRE,
             BEDFORDSHIRE_COURTLIST, CAMBRIDGE);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Cambridge County and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("197 East Road, Cambridge, CB1 1BA"));
@@ -219,15 +207,13 @@ public class CaseHearingFunctionsTest {
     }
 
     @Test
-    public void shouldPopulateCambridgeCourtDetailsFinrem() {
-
+    void shouldPopulateCambridgeCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHEAST)
             .southEastFrcList(RegionSouthEastFrc.BEDFORDSHIRE)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().bedfordshireCourtList(BedfordshireCourt.CAMBRIDGE)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Cambridge County and Family Court"));
@@ -237,259 +223,226 @@ public class CaseHearingFunctionsTest {
     }
 
     @Test
-    public void shouldPopulateReadingCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateReadingCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHEAST,
             SOUTHEAST_FRC_LIST, THAMESVALLEY,
             THAMESVALLEY_COURTLIST, READING);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Reading County Court and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Hearing Centre, 160-163 Friar Street, Reading, RG1 1HE"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0118 987 0500"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("family.reading.countycourt@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateReadingCourtDetailsFinrem() {
+    void shouldPopulateReadingCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHEAST)
             .southEastFrcList(RegionSouthEastFrc.THAMES_VALLEY)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().thamesValleyCourtList(ThamesValleyCourt.READING)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Reading County Court and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Hearing Centre, 160-163 Friar Street, Reading, RG1 1HE"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0118 987 0500"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("family.reading.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateKentCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateKentCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHEAST,
             SOUTHEAST_FRC_LIST, KENT,
             KENTFRC_COURTLIST, KENT_DARTFORD_COURTS);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Dartford County Court And Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Home Gardens, Dartford, DA1 1DX"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01634 887900"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("family.dartford.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateKentCourtDetailsFinrem() {
-
+    void shouldPopulateKentCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHEAST)
             .southEastFrcList(RegionSouthEastFrc.KENT_FRC)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().kentSurreyCourtList(KentSurreyCourt.FR_kent_surreyList_3)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Dartford County Court And Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Home Gardens, Dartford, DA1 1DX"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01634 887900"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("family.dartford.countycourt@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateKentThanetCourtDetailsFinrem() {
-
+    void shouldPopulateKentThanetCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHEAST)
             .southEastFrcList(RegionSouthEastFrc.KENT_FRC)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().kentSurreyCourtList(KentSurreyCourt.FR_kent_surreyList_11)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Thanet Family Court Hearing Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("2nd Floor, The Courthouse, Cecil Square, Margate, Kent CT9 1RL"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01227 819200"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("Family.canterbury.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateDurhamCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateDurhamCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, NORTHEAST,
             NORTHEAST_FRC_LIST, CLEVELAND,
             CLEAVELAND_COURTLIST, "FR_cleaveland_hc_list_2");
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Durham Justice Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Green Lane, Old Elvet, Durham, DH1 3RG"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0191 2058750"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("Family.newcastle.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateDurhamCourtDetailsFinrem() {
+    void shouldPopulateDurhamCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.NORTHEAST)
             .northEastFrcList(RegionNorthEastFrc.CLEVELAND)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().cleavelandCourtList(ClevelandCourt.FR_CLEVELAND_HC_LIST_2)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Durham Justice Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Green Lane, Old Elvet, Durham, DH1 3RG"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0191 2058750"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("Family.newcastle.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateBournemouthCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateBournemouthCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHWEST,
             SOUTHWEST_FRC_LIST, DORSET,
             DORSET_COURTLIST, BOURNEMOUTH);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Bournemouth and Poole County Court and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Courts of Justice, Deansleigh Road, Bournemouth, BH7 7DS"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01202 502 800"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("BournemouthFRC.bournemouth.countycourt@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateBournemouthCourtDetailsFinrem() {
-
+    void shouldPopulateBournemouthCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHWEST)
             .southWestFrcList(RegionSouthWestFrc.DORSET)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().dorsetCourtList(DorsetCourt.BOURNEMOUTH)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Bournemouth and Poole County Court and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Courts of Justice, Deansleigh Road, Bournemouth, BH7 7DS"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01202 502 800"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("BournemouthFRC.bournemouth.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateTorquayCourtDetailsFinrem() {
+    void shouldPopulateTorquayCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHWEST)
             .southWestFrcList(RegionSouthWestFrc.DEVON)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().devonCourtList(DevonCourt.TORQUAY)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Torquay and Newton Abbot County and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("The Willows, Nicholson Road, Torquay, TQ2 7AZ"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01752 677 400"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("FR.PlymouthHub@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateTorquayCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateTorquayCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHWEST,
             SOUTHWEST_FRC_LIST, DEVON,
             DEVON_COURTLIST, TORQUAY);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Torquay and Newton Abbot County and Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("The Willows, Nicholson Road, Torquay, TQ2 7AZ"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01752 677 400"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("FR.PlymouthHub@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateSalisburyCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateSalisburyCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, SOUTHWEST,
             SOUTHWEST_FRC_LIST, BRISTOLFRC,
             BRISTOL_COURTLIST, SALISBURY);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Salisbury Law Courts"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Wilton Road, Salisbury, SP2 7EP"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0117 366 4942"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("BristolFRC.bristol.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateSalisburyCourtDetailsFinrem() {
+    void shouldPopulateSalisburyCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.SOUTHWEST)
             .southWestFrcList(RegionSouthWestFrc.BRISTOL)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().bristolCourtList(BristolCourt.SALISBURY_LAW_COURTS)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Salisbury Law Courts"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Wilton Road, Salisbury, SP2 7EP"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0117 366 4942"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("BristolFRC.bristol.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulatePrestatynCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulatePrestatynCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, WALES,
             WALES_FRC_LIST, NORTHWALES,
             NORTH_WALES_COURTLIST, PRESTATYN);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Prestatyn Justice Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Victoria Road, Prestatyn, LL19 7TE"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01745 851916"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("Family.prestatyn.countycourt@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulatePrestatynCourtDetailsFinrem() {
+    void shouldPopulatePrestatynCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.WALES)
             .walesFrcList(RegionWalesFrc.NORTH_WALES)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().northWalesCourtList(NorthWalesCourt.PRESTATYN)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Prestatyn Justice Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Victoria Road, Prestatyn, LL19 7TE"));
-        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("01745 851916"));
+        assertThat(stringObjectMap.get(COURT_DETAILS_PHONE_KEY), is("0300 123 5577"));
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("Family.prestatyn.countycourt@justice.gov.uk"));
     }
 
     @Test
-    public void shouldPopulateConsentedCourtDetails() {
-
+    void shouldPopulateConsentedCourtDetails() {
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildConsentedFrcCourtDetails();
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Family Court at the Courts and Tribunal Service Centre"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("PO Box 12746, Harlow, CM20 9QZ"));
@@ -497,14 +450,12 @@ public class CaseHearingFunctionsTest {
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("contactFinancialRemedy@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateHighCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateHighCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, HIGHCOURT,
             HIGHCOURT_FRC_LIST, HIGHCOURT,
             HIGHCOURT_COURTLIST, HIGHCOURT_COURT);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("High Court Family Division"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY),
@@ -513,19 +464,15 @@ public class CaseHearingFunctionsTest {
         assertThat(stringObjectMap.get(COURT_DETAILS_EMAIL_KEY), is("rcj.familyhighcourt@justice.gov.uk"));
     }
 
-
     @Test
-    public void shouldPopulateHighCourtDetailsFinrem() {
-
+    void shouldPopulateHighCourtDetailsFinrem() {
         AllocatedRegionWrapper regionWrapper = AllocatedRegionWrapper.builder().regionList(Region.HIGHCOURT)
             .highCourtFrcList(RegionHighCourtFrc.HIGHCOURT)
             .courtListWrapper(
                 DefaultCourtListWrapper.builder().highCourtList(HighCourt.HIGHCOURT_COURT)
                     .build())
             .build();
-
         FinremCaseData caseData = getFinremCaseData(regionWrapper);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("High Court Family Division"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY),
@@ -535,23 +482,21 @@ public class CaseHearingFunctionsTest {
     }
 
     @Test
-    public void shouldReturnNullIfHighCourtFRCIsWrongDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldReturnNullIfHighCourtFRCIsWrongDetails() {
+        Map<String, Object> caseData = Map.of(
             REGION, HIGHCOURT,
             HIGHCOURT_FRC_LIST, LONDON,
             HIGHCOURT_COURTLIST, HIGHCOURT_COURT);
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildFrcCourtDetails(caseData);
         assertTrue(stringObjectMap.isEmpty());
     }
 
     @Test
-    public void shouldPopulateInterimHearingLondonFrcCourtDetails() {
-        Map<String, Object> caseData = ImmutableMap.of(
+    void shouldPopulateInterimHearingLondonFrcCourtDetails() {
+        Map<String, Object> caseData = Map.of(
             INTERIM_REGION, LONDON,
             INTERIM_LONDON_FRC_LIST, CFC,
             INTERIM_HEARING_CFC_COURT_LIST, "FR_s_CFCList_2");
-
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildInterimHearingFrcCourtDetails(caseData);
         assertThat(stringObjectMap.get(COURT_DETAILS_NAME_KEY), is("Croydon County Court And Family Court"));
         assertThat(stringObjectMap.get(COURT_DETAILS_ADDRESS_KEY), is("Croydon County Court, Altyre Road, Croydon, CR9 5AB"));
@@ -560,7 +505,7 @@ public class CaseHearingFunctionsTest {
     }
 
     @Test
-    public void shouldReturnEmptyMap() {
+    void shouldReturnEmptyMap() {
         Map<String, Object> caseData = new HashMap<>();
         Map<String, Object> stringObjectMap = CaseHearingFunctions.buildInterimHearingFrcCourtDetails(caseData);
         assertThat("Returns empty map", stringObjectMap.isEmpty());
